--- a/src/sass/underline.sass
+++ b/src/sass/underline.sass
@@ -12,7 +12,7 @@
         height: 2px
         bottom: 0
         left: 0
-        background-color: black
+        background-color: var(--color-text, #666666)
         visibility: hidden
         transform: scaleX(0)
         transition: all 0.3s ease-in-out
