Add ModalWindow component

--- a/src/sass/underline.sass
+++ b/src/sass/underline.sass
@@ -21,3 +21,8 @@
     &:hover::after 
         visibility: visible
         transform: scaleX(1)
+
+    &:focus-visible:after
+        visibility: visible
+        transform: scaleX(1)
+        
